2008-11-06  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am: Missed out on a header file for minizip

2008-11-06  Alan McGovern  <amcgovern@novell.com>

	* minizip/minizip/miniunz.c :
	* Makefile.am: Removed unnecessary file from build and svn.

2008-11-06  Alan McGovern  <amcgovern@novell.com>

	* minizip/*.am :
	* Makefile.am: Merged minizip build into the support code.

2008-11-05  Bill Holmes  <billholmes54@gmail.com>

	* Makefile.am : For generation of map.c adding preprocessor
	  checks for sys/time.h, unistd.h, dirent.h and utime.h.

	* map.c : Re-run 'make refresh' to add preprocessor checks
	  for sys/time.h, unistd.h, dirent.h and utime.h.

	Code is contributed under MIT/X11 license.

2008-10-15  Jonathan Pryor  <jpryor@novell.com>

	* time.c: Add Mono_Posix_Syscall_nanosleep().

2008-10-15  Jonathan Pryor  <jpryor@novell.com>

	* fcntl.c: Use Mono_Posix_{From,To}Flock() for flock conversion.
	* Makefile.am: Include <time.h> in map.c.
	* map.c, map.h: Flush; adds Flock, Timespec support.

2008-09-14  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* serial.c: When writing bytes and polling, take into account negative
	values to indicate infinite timeout. Patch by Leszek Ciesielski.
	Fixes #399245.

2008-07-22  Zoltan Varga  <vargaz@gmail.com>

	* Makefile.am (patch-libtool): New helper target.

2008-04-05  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* serial.c (set_attributes): When setting parity to Even,
	besides removing the PARODD bit, add the PARENB bit to actually
	use even parity.
	Patch by Leszek Ciesielski.
	Fixes #365248.

2008-03-31  Miguel de Icaza  <miguel@novell.com>

	* serial.c (write_serial): Avoid infinite loops, see #375580.

2008-02-12  Jonathan Pryor  <jpryor@novell.com>

	* signal.c: SLES9 has glib 2.2, so we can't rely on g_atomic_int_*().
	  Provide a fallback mechanism between using Mono's atomic.h, glib 2.4
	  functions, and horribly unsafe-but-no-alternative code.
